Pushing to update

--- a/Template/index.html
+++ b/Template/index.html
@@ -12,4 +12,35 @@
             <span class="navbar-brand mb-0 h1 w-100 text-center">Team Profile</span>
         </nav>
         <div class="container">
-            <div class="row">
+            <div class="row"><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Yah'Mir<br /><br />Manager</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 144325</li>
+                <li class="list-group-item">Email Address: yahmir.mcghee@gmail.com</li>
+                <li class="list-group-item">Office Phone: 2675819847</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Isaac<br /><br />Engineer</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 7455812</li>
+                <li class="list-group-item">Email Address: isaccawesome@hotmail.org</li>
+                <li class="list-group-item">GitHub: Isaac_DaBest</li>
+            </ul>
+            </div>
+        </div><div class="col-6">
+            <div class="card mx-auto mb-3" style="width: 18rem">
+            <h5 class="card-header">Polly<br /><br />Intern</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">ID: 47715</li>
+                <li class="list-group-item">Email Address: pollyflower@gmail.com</li>
+                <li class="list-group-item">School: Perfect Tech</li>
+            </ul>
+            </div>
+        </div> </div>
+    </div>
+    
+</body>
+</html>
